# VisionGraph

./: build_graph.sh
vision_graph/: CMakeLists.txt
vision_graph/orion_graph/: CMakeLists.txt  README.md
vision_graph/orion_graph/demos/: CMakeLists.txt  dlcv_snpe_test.cpp  face_graph.cpp  face_graph.json  face_video_graph.cpp  mini_graph.cpp  multipleface.json
vision_graph/orion_graph/examples/: CMakeLists.txt  condition_multifunction_node.cpp  dining_philosophers.cpp  hello_graph.cpp  orion_simple_flow.cpp  parallel_task.cpp  tbb_parallel_for.cpp  vision_flow_graph.cpp
vision_graph/orion_graph/tests/: CMakeLists.txt  test_tensor_numeric.cpp
vision_graph/orion_graph/tools/: CMakeLists.txt  README.md  draw_graph.cpp  string_func.cpp  string_func.h
vision_graph/orion_graph/vision_graph/: graph_func_node.h  graph_node.h  graph_param.h  parallel_task.h  sub_graph.cpp  sub_graph.h  vision_graph.cpp  vision_graph.hpp
vision_graph/orion_graph/vision_graph/common/: matrix.cpp  matrix.h  sse_neon.hpp  utils.h
vision_graph/orion_graph/vision_graph/include/: graph_error.h  graph_solver.h  graph_solver_factory.h  graph_tensor.h  json.hpp  vision_graph.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/: solver_cut_image.cpp  solver_cut_image.h  solver_detect.cpp  solver_detect.h  solver_face_alignment.cpp  solver_face_alignment.h  solver_face_hog_verify.cpp  solver_face_hog_verify.h  solver_face_kpts_smooth.cpp  solver_face_kpts_smooth.h  solver_feature.cpp  solver_feature.h  solver_featuremap.cpp  solver_featuremap.h  solver_geometry_offset.cpp  solver_geometry_offset.h  solver_get_good_boxes.cpp  solver_get_good_boxes.h  solver_keypoints.cpp  solver_keypoints.h  solver_kpts_box.cpp  solver_kpts_box.h  solver_multiclass.cpp  solver_multiclass.h  solver_select_box.cpp  solver_select_box.h  solver_select_boxes.cpp  solver_select_boxes.h  solver_tracker_kcf.cpp  solver_tracker_kcf.h  solver_tracker_single_face.cpp  solver_tracker_single_face.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/: face_hog_const.h  face_hog_verify.cpp  face_hog_verify.h  face_kpts_smooth.cpp  face_kpts_smooth.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/apce_conf/: apce_conf.cpp  apce_conf.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/face_alignment/: face_alignment.cpp  face_alignment.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/fhog/: fhog.cpp  fhog.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/kcf_tracker/: complexmat.hpp  kcf.cpp  kcf.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/kcf_tracker/piotr_fhog/: SSE2NEON.h  gradientMex.cpp  wrappers.hpp
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/eco_tracker/include/: base_feature_extractor.h  cnn_feature_extractor.h  complexmat.h  data_type.h  eco_tracker.h  eigen_utils.h  feat_factory_creator.h  feature_factory.h  fourier_tools.h  hog_feature_extractor.h  init_box_selector.hpp  sample_space_model.h  scale_filter.h  sse.hpp  utils.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/eco_tracker/src/: cnn_feature_extractor.cpp  eco_tracker.cpp  eigen_utils.cpp  feat_factory_creator.cpp  feature_factory.cpp  fourier_tool.cpp  hog_feature_extractor.cpp  init_box_selector.cpp  sample_space_model.cpp  scale_filter.cpp  utils.cpp  vgg16_mean.cpp
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/sideface_cls/include/: CComputSim.h  FacialLandmarks.h  Histogram.h  infer_factories.h  inference_detection.h  inference_face_keypoints.h  inference_face_verify.h  norm.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/sideface_cls/src/: CComputSim.cpp  FacialLandmarks.cpp  FeatureCalculation.cpp  Histogram.cpp  infer_factories.cpp  inference_detection.cpp  inference_face_keypoints.cpp  inference_face_verify.cpp
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/strategy/include/: base_strategy.h  base_track_def.h  face_ecotrack_strategy.h  lead_strategy.h  reid_utils.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/strategy/include/base/include/: base_detector.h  base_infer_def.h  base_keypoints.h  base_verifier.h  rpy_pose.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/strategy/include/utils/include/: base_utils.h
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/strategy/include/utils/src/: base_utils.cpp
vision_graph/orion_graph/vision_graph/solvers/function_solvers/implement/tracker/single_face_tracker/strategy/src/: face_ecotrack_strategy.cpp  lead_strategy.cpp  reid_utils.cpp
vision_graph/orion_graph/vision_graph/solvers/intuitive_solvers/: README.md  solver_branch.cpp  solver_branch.h  solver_compare.cpp  solver_compare.h  solver_counter.cpp  solver_counter.h  solver_data.cpp  solver_data.h  solver_demux.cpp  solver_demux.h  solver_logic.cpp  solver_logic.h  solver_mux.cpp  solver_mux.h  solver_selector.cpp  solver_selector.h
vision_graph/orion_graph/vision_graph/solvers/intuitive_solvers/implement/scalar_compare/: scalar_compare.cpp  scalar_compare.h
vision_graph/test/: CMakeLists.txt
vision_graph/test/tbb/: test_allocators.cpp
vision_graph/test/tbbmalloc/: test_scalable_allocator.cpp
